--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "homepage": "https://github.com/ernestoalejo/gulp-ondemand-server",
   "dependencies": {
     "underscore": "~1.5.2",
-    "connect": "~2.12.0"
+    "connect": "~2.12.0",
+    "gulp-watch": "~0.5.0",
+    "http-proxy": "~1.0.2"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
