--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "underscore": "~1.5.2",
     "connect": "~2.12.0",
     "gulp-watch": "~0.5.0",
+    "bytes": "~0.2.1",
     "http-proxy": "~1.0.2"
   },
   "devDependencies": {
@@ -36,7 +37,6 @@
     "gulp": "~3.5.2",
     "jshint-stylish": "~0.1.5",
     "gulp-jshint": "~1.4.0",
-    "gulp-mocha": "~0.4.1",
-    "bytes": "~0.2.1"
+    "gulp-mocha": "~0.4.1"
   }
 }
